# mavlink_control

./: CMakeLists.txt  README.md  autopilot_interface.cpp  autopilot_interface.h  integrated_interface.cpp  integrated_interface.h  makefile  mavlink_control.cpp  mode_selecter.cpp  mode_selecter.h  my_mavlink_control.cpp  my_mavlink_control.h  port_mangement.cpp  port_mangement.h  serial_port.cpp  udp_example.c
Copter/: CMakeLists.txt  autopilot_interface.cpp  autopilot_interface.h  integrated_interface.cpp
Rover/: CMakeLists.txt  ardurover_interface.cpp  ardurover_interface.h  integrated_interface.cpp  integrated_interface.h
Sub/: CMakeLists.txt
common/: CMakeLists.txt  autopilot_interface.h  common.h
examples/: CMakeLists.txt  common_usage.cpp  mavlink_control_copter.cpp  mavlink_controller_copter.cpp  mavlink_controller_copter.h  mavlink_controller_rover.cpp  mavlink_controller_rover.h  my_mavlink_control.cpp  my_mavlink_control.h
mavlink/include/mavlink/v2.0/common/: common.h  mavlink_msg_set_position_target_local_ned.h  version.h
mavlink/include/mavlink/v2.0/minimal/: mavlink.h  version.h
mavlink/include/mavlink/v2.0/standard/: mavlink.h
